[package]
name = "tui-counters"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/IRSMsoso/tui-counters"
description = "Simple counters TUI"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
ratatui = "0.27.0"
anyhow = "1.0.86"
tui-input = "0.9.0"
clap = { version = "4.5.13", features = ["derive"] }
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }